# CG-lab

./: .gitignore  python_glfw.py  simpledda.py  symmetricaldda.py  test_glad.cpp
CPP/: CMakeLists.txt  glad.c  test_glew.cpp
CPP/include/glad/: glad.h
Python/: Bershenham's Algorithm.py  Combined.py  Simple DDA.md  Symmetrical DDA.md  simpledda.py  symmetricaldda.py  test_pygame.py
